# brightdata-scraper

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  server.py
docs/plans/: 2026-01-15-temu-collector-phase1.md
extension/: manifest.json
extension/background/: service-worker.js  xuanpin-debugger.js
extension/content/: early-inject.js  early-injector.js  extractor.js  main.js  network-hook.js  page-bridge.js  shadow-hook.js
extension/popup/: popup.html  popup.js
extension/utils/: api.js  storage.js
src/: __init__.py  client.py  config.py  database.py  models.py
src/api/: __init__.py  main.py
src/api/routers/: collect.py  products.py
src/scrapers/: __init__.py  amazon.py  base.py  temu.py
src/temu/: __init__.py  models.py  service.py
src/utils/: __init__.py  image_downloader.py
tests/: __init__.py  test_api_collect.py  test_api_products.py  test_database.py  test_scrapers.py  test_temu_models.py  test_temu_service.py
